// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't parses section if unsupported 1`] = `
Array [
  Object {
    "content": "# 1 Unsupported section",
    "type": "line",
  },
  Object {
    "content": "1 paragraph.",
    "type": "line",
  },
]
`;

exports[`parses multiple paragraphs 1`] = `
Array [
  Object {
    "content": "1 paragraph.",
    "type": "line",
  },
  Object {
    "content": "2 paragraph.",
    "type": "line",
  },
  Object {
    "content": "3 paragraph.",
    "type": "line",
  },
]
`;

exports[`parses nested sectioning 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "content": "1 paragraph.",
        "type": "line",
      },
    ],
    "name": null,
    "type": "section",
  },
  Object {
    "children": Array [
      Object {
        "content": "2 paragraph.",
        "type": "line",
      },
      Object {
        "children": Array [
          Object {
            "content": "3 paragraph.",
            "type": "line",
          },
        ],
        "name": "1 Sub-section",
        "type": "subsection",
      },
    ],
    "name": "1 Section",
    "type": "section",
  },
  Object {
    "children": Array [
      Object {
        "content": "4 paragraph.",
        "type": "line",
      },
    ],
    "name": "2 Sub-section",
    "type": "section",
  },
  Object {
    "children": Array [
      Object {
        "content": "5 paragraph.",
        "type": "line",
      },
    ],
    "name": "2 Section",
    "type": "section",
  },
]
`;

exports[`parses section at start 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "content": "1 paragraph.",
        "type": "line",
      },
    ],
    "name": "1 Section",
    "type": "section",
  },
]
`;

exports[`parses section in middle 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "content": "1 paragraph.",
        "type": "line",
      },
    ],
    "name": null,
    "type": "section",
  },
  Object {
    "children": Array [
      Object {
        "content": "2 paragraph.",
        "type": "line",
      },
    ],
    "name": "1 Section",
    "type": "section",
  },
]
`;

exports[`parses single paragraph 1`] = `
Array [
  Object {
    "content": "1 paragraph.",
    "type": "line",
  },
]
`;

exports[`parses whitespace 1`] = `Array []`;
